Updated test for previous commit